Add Todo List UI & Integrate With API

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,37 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.archived-row > td:not(:last-child) {
+  opacity: 0.25;
+}
+tr > td:last-child {
+  border-left: none;
+}
+.my-custom-scrollbar {
+  position: relative;
+  max-height: 260px;
+  overflow: auto;
+}
+.table-wrapper-scroll-y {
+  display: block;
+}
+button {
+  width: 130px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 778px) and( max-width:900px) {
+  .container {
+    max-width: 800px !important;
   }
 }
