--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,8 +17,8 @@ tr > td:last-child {
   display: block;
   padding: 2rem;
 }
-button {
-  width: 110px;
+.btn {
+  width: 110px !important;
 }
 .mr-2 {
   margin-right: 1rem;
